name:                bomberman
version:             0.1.0.0
homepage:            https://github.com/sakethkhandavalli/cse230_group32
author:              Saketh Khandavalli, Naga Makam, Ellen Huseby, Kaja Erfjord
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bomberman
  hs-source-dirs:      src
  other-modules:       Bomberman
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
                     , QuickCheck
